--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos/style.css" />
     <link rel="stylesheet" href="estilos/media-queries.css" />
     <link rel="stylesheet" href="../font/css/all.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
     <main>
@@ -35,7 +36,10 @@
             </div>
 
             <div class="campo">
-              <i class="fa fa-key"></i>
+            
+              <i class="material-symbols-outlined">
+                person
+              </i>
               <input
                 type="password"
                 name="senha"
