--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           </p>
           <form action="login.php" method="post" autocomplete="on">
             <div class="campo">
-              <i class="fa fa-user"></i>
+              <i class="material-symbols-outlined">
+                person
+              </i>
               <input
                 type="email"
                 name="login"
@@ -38,7 +40,7 @@
             <div class="campo">
             
               <i class="material-symbols-outlined">
-                person
+                key
               </i>
               <input
                 type="password"
